# visual-identity-kyc-final

./: .env.example  .gitignore  README.md  TEST_REPORT.md  docker-compose.yml  remove-worker-init.json  working.md
api/: Dockerfile  docker-entrypoint.sh  go.mod  openapi.yaml
docs/: architecture.md  frontend_github_pages.md  future_innovation.md  one_click_windows.md  requirements_mapping.md
frontend/: README.md  app.js  index.html  styles.css
inference/: Dockerfile  pyproject.toml
inference/app/: face_embedder.py  liveness.py  main.py  name_embedder.py  schemas.py
inference/scripts/: download_models.py
inference/tests/: test_name_embedder.py
k8s/: README.md
scripts/: check_kafka_windows.ps1  check_swagger_windows.ps1  create_topics_windows.ps1  debug_frontend_verify_windows.ps1  diagnose_empty_reply_windows.ps1  fix_redpanda_windows.ps1  k8s_check_status_windows.ps1  k8s_create_topics_windows.ps1  k8s_debug_inference_windows.ps1  k8s_debug_worker_windows.ps1  k8s_fix_verify_end_to_end_windows.ps1  k8s_fix_verify_worker_windows.ps1  k8s_force_worker_consume_windows.ps1  k8s_hard_reset_pipeline_windows.ps1  k8s_recover_worker_rollout_windows.ps1  k8s_restart_worker_windows.ps1  k8s_trace_transaction_windows.ps1  k8s_use_arcface_inference_windows.ps1  k8s_use_mock_inference_windows.ps1  live_api_cloudflare_windows.ps1  one_click_windows.ps1  open_frontend_local_windows.ps1  rebuild_api_windows.ps1  recover_api_windows.ps1  redpanda-init.sh  reset_all_windows.ps1  setup_inference_linux.sh  setup_inference_windows.ps1  smoke_test_bash.sh  smoke_test_windows.ps1  (+5 more)
(+52 files in other folders)
