[project]
name = "visual-kyc-inference"
version = "0.1.0"
description = "Stage 3 real embedding service for Visual Identity KYC"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "numpy>=1.26.0",
  "opencv-python-headless>=4.10.0",
  "onnxruntime>=1.18.0",
  "requests>=2.32.0",
  "pydantic>=2.7.0"
]

[tool.uv]
package = false
